--- a/Project_Manager/templates/users/profile.html
+++ b/Project_Manager/templates/users/profile.html
@@ -1,5 +1,6 @@
+{% extends 'users/base-profile.html' %}
 
-
+{% block profile-content %}
 <!-- Секция о себе -->
 <section class="mb-8">
   <h2 class="text-2xl font-semibold mb-2">ОПИСАНИЕ О СЕБЕ</h2>
@@ -31,3 +32,5 @@
     </p>
   </div>
 </section>
+
+{% endblock profile-content %}
