profile and user editing

--- a/Project_Manager/templates/users/base-profile.html
+++ b/Project_Manager/templates/users/base-profile.html
@@ -22,7 +22,7 @@
         class="tab {% if request.resolver_match.url_name == 'change_profile' %}tab-active{% endif %}">
         Редактировать
       </a>
-      <a role="tab" class="tab">Со стороны</a>
+      <a role="tab" class="tab">Приватность</a>
     </div>
 
     <div>
