--- a/Project_Manager/templates/users/includes/add-tag-modal.html
+++ b/Project_Manager/templates/users/includes/add-tag-modal.html
@@ -1,18 +1,32 @@
 
 
 <dialog id="modal_add_tag" class="modal">
-    <div class="modal-box bg-gray-100 shadow-xl text-base-content rounded-lg">
-        <button onclick="this.closest('dialog').close();" class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2">✕</button>
-        <h3 class="text-2xl text-gray-600 font-bold">Создание тега</h3>
-        <form action="{% url 'users:create_user_tag' %}" method="post">{% csrf_token %}
-            
-        <!-- Название -->
-        <div class="mb-4">
-            <label class="text-gray-800 text-lg my-1" for="{{ tag_form.name.id_for_label}}">{{ tag_form.name.label }}</label>
-            {{ tag_form.name }}
+    <div class="modal-box bg-gray-100 max-w-md p-6 rounded-lg shadow-xl">
+      <form method="post" action="">{% csrf_token %}
+        
+        <a class="btn btn-sm btn-circle btn-ghost absolute right-3 top-3 text-gray-600 hover:text-gray-900 hover:bg-gray-200 transition-colors" onclick="add_tag_modal.close();">✕</a>
+        <h3 class="text-2xl font-bold text-gray-800 mb-4">Теги</h3>
+
+        <div>
+
+          <div class="flex flex-wrap gap-2">
+            {% for tag in tags %}
+              <label class="cursor-pointer mb-2">
+                <input type="checkbox" name="tag" value="{{ tag.id }}"
+                      {% if tag in update_tag_form.initial.tag or tag in update_tag_form.data.tag %}checked{% endif %}
+                      class="hidden peer">
+                <span class="peer-checked:{{tag.color.bg_color}} peer-checked:{{tag.color.text_color}} peer-checked:{{tag.color.border_color}}
+                            bg-gray-200 text-gray-700 px-3 py-1 border rounded-full transition-all duration-200">
+                  {{ tag.name }}
+                </span>
+              </label>
+            {% endfor %}
+          </div>
         </div>
 
-        <button class="btn btn-primary text-white" name="add_tag" type="submit">Создать</button>
-        </form>
+        <div class="modal-action mt-6">
+          <button class="btn btn-primary text-sm text-white" name="update_tags" type="submit">Сохранить</button>
+        </div>
+      </form>
     </div>
 </dialog>
