--- a/Project_Manager/templates/users/profile.html
+++ b/Project_Manager/templates/users/profile.html
@@ -14,21 +14,24 @@
   <div>
     <div class="flex items-center mb-2">
     <h2 class="text-2xl font-semibold mb-4">ТЕГИ</h2>
-      <a onclick="modal_add_tag.showModal();" class="ml-2 pb-1 w-8 h-8 border-2 border-dashed border-black bg-white text-black text-xl flex items-center justify-center hover:bg-black hover:text-white transition-colors duration-300 rounded-lg cursor-pointer">
+      <a onclick="modal_create_tag.showModal();" class="ml-2 pb-1 w-8 h-8 border-2 border-dashed border-black bg-white text-black text-xl flex items-center justify-center hover:bg-black hover:text-white transition-colors duration-300 rounded-lg cursor-pointer">
         <span class="leading-none">+</span>
       </a>
     </div>
 
   </div>
 
-  <div class="group relative border border-gray-200 rounded-md p-2 min-h-[3rem]" onclick="" title="Выберите или создайте новый тег">
+  <div class="group relative border border-gray-200 rounded-md p-2 min-h-[3rem]" onclick="modal_add_tag.showModal();" title="Выберите или создайте новый тег">
     {% for tag in profile.tags.all %}
+    <span class="inline-flex items-center rounded-md cursor-default px-2 py-1 text-sm font-medium border {{tag.get_colors}}">
         {{tag.name}}
+      </span>
     {% endfor %}
     <div class="absolute inset-0 rounded-md bg-gray-200 cursor-pointer opacity-0 group-hover:opacity-50"></div>
   </div>
 
   {% include 'users/includes/add-tag-modal.html' %}
+  {% include 'users/includes/create-tag-modal.html' %}
 </section>
 
 <!-- Контакты -->
