--- a/Project_Manager/templates/users/includes/tags-modal.html
+++ b/Project_Manager/templates/users/includes/tags-modal.html
@@ -1,10 +1,10 @@
 
 
-<dialog id="modal_add_tag" class="modal">
+<dialog id="modal_tags" class="modal">
     <div class="modal-box bg-gray-100 max-w-md p-6 rounded-lg shadow-xl">
       <form method="post" action="">{% csrf_token %}
         
-        <a class="btn btn-sm btn-circle btn-ghost absolute right-3 top-3 text-gray-600 hover:text-gray-900 hover:bg-gray-200 transition-colors" onclick="add_tag_modal.close();">✕</a>
+        <a class="btn btn-sm btn-circle btn-ghost absolute right-3 top-3 text-gray-600 hover:text-gray-900 hover:bg-gray-200 transition-colors" onclick="modal_tags.close();">✕</a>
         <h3 class="text-2xl font-bold text-gray-800 mb-4">Теги</h3>
 
         <div>
@@ -13,11 +13,10 @@
             {% for tag in tags %}
               <label class="cursor-pointer mb-2">
                 <input type="checkbox" name="tag" value="{{ tag.id }}"
-                      {% if tag in update_tag_form.initial.tag or tag in update_tag_form.data.tag %}checked{% endif %}
                       class="hidden peer">
-                <span class="peer-checked:{{tag.color.bg_color}} peer-checked:{{tag.color.text_color}} peer-checked:{{tag.color.border_color}}
+                <span class="{{tag.get_colors}} cursor-default
                             bg-gray-200 text-gray-700 px-3 py-1 border rounded-full transition-all duration-200">
-                  {{ tag.name }}
+                  {{ tag.name }} <a href="{% url 'users:delete_user_tag' tag.pk %}" class="ml-1">✕</a>
                 </span>
               </label>
             {% endfor %}
