--- a/Project_Manager/templates/users/profile.html
+++ b/Project_Manager/templates/users/profile.html
@@ -21,7 +21,7 @@
 
   </div>
 
-  <div class="group relative border border-gray-200 rounded-md p-2 min-h-[3rem]" onclick="modal_add_tag.showModal();" title="Выберите или создайте новый тег">
+  <div class="group relative border border-gray-200 rounded-md p-2 min-h-[3rem]" onclick="modal_tags.showModal();" title="Выберите или создайте новый тег">
     {% for tag in profile.tags.all %}
     <span class="inline-flex items-center rounded-md cursor-default px-2 py-1 text-sm font-medium border {{tag.get_colors}}">
         {{tag.name}}
@@ -30,7 +30,7 @@
     <div class="absolute inset-0 rounded-md bg-gray-200 cursor-pointer opacity-0 group-hover:opacity-50"></div>
   </div>
 
-  {% include 'users/includes/add-tag-modal.html' %}
+  {% include 'users/includes/tags-modal.html' %}
   {% include 'users/includes/create-tag-modal.html' %}
 </section>
 
