delete social network

--- a/Project_Manager/templates/users/includes/social-links-modal.html
+++ b/Project_Manager/templates/users/includes/social-links-modal.html
@@ -1,6 +1,6 @@
 <dialog id="modal_social_network" class="modal">
   <div class="modal-box bg-white max-w-md p-6 rounded-lg shadow-xl">
-    <form method="post" action="{% url 'users:add_social_link' %}">
+    <form method="post" action="{% url 'users:add_social_network' %}">
       {% csrf_token %}
 
       <!-- Кнопка закрытия -->
