--- a/Project_Manager/templates/users/card-profile.html
+++ b/Project_Manager/templates/users/card-profile.html
@@ -8,10 +8,9 @@
     <button class="btn btn-primary btn-sm mt-4 w-full">Download Resume</button>
   </div>
   <div class="flex justify-center space-x-4 mt-4 text-purple-600 text-lg">
-    <a href="#"><i class="fab fa-facebook"></i></a>
-    <a href="#"><i class="fab fa-twitter"></i></a>
-    <a href="#"><i class="fab fa-instagram"></i></a>
-    <a href="#"><i class="fab fa-linkedin"></i></a>
+    {% for social in social_links %}
+    <a href="{{ social.link }}"><i class="fab {{ social.get_fa_name }}"></i></a>
+    {% endfor %}
   </div>
   <div class="mt-6">
     <h3 class="text-sm font-semibold mb-2 text-gray-800">КРАТКОЕ ОПИСАНИЕ О СЕБЕ</h3>
