--- a/Project_Manager/templates/tasks/task-detail.html
+++ b/Project_Manager/templates/tasks/task-detail.html
@@ -103,11 +103,11 @@
                 </div>
                 Вложения
               </div>
-              <button class="border-2 border-dashed border-gray-400 hover:border-sky-500 hover:text-sky-500 bg-white ml-2 p-2 px-3 text-base rounded-lg leading-4 transition-all duration-300 ease-in-out transform shadow-sm hover:shadow-md">
+              <button onclick="modal_add_image_task.showModal();" class="border-2 border-dashed border-gray-400 hover:border-sky-500 hover:text-sky-500 bg-white ml-2 p-2 px-3 text-base rounded-lg leading-4 transition-all duration-300 ease-in-out transform shadow-sm hover:shadow-md">
                 + добавить
               </button>
+              {% include 'tasks/includes/add-task-image-modal.html' %}
             </summary>
-        
             <div class="mt-2 pl-6 text-gray-600">
               <p class="text-sm italic">Нет вложений.</p>
             </div>
