--- a/Project_Manager/templates/tasks/task-detail.html
+++ b/Project_Manager/templates/tasks/task-detail.html
@@ -108,8 +108,16 @@
               </button>
               {% include 'tasks/includes/add-task-image-modal.html' %}
             </summary>
-            <div class="mt-2 pl-6 text-gray-600">
-              <p class="text-sm italic">Нет вложений.</p>
+            <div class="mt-2 pl-6 text-gray-600 flex">
+              {% if task.images.exists %}
+                {% for image in task.images.all %}
+                  <a href="{{ image.image.url }}" target="_blank" class="mr-4">
+                    <img src="{{ image.image.url }}" class="w-40" alt="">
+                  </a>
+                {% endfor %}
+              {% else %}
+                <p class="text-sm italic">Нет вложений.</p>
+              {% endif %}
             </div>
           </details>
         </div>
