--- a/Project_Manager/templates/users/card-profile.html
+++ b/Project_Manager/templates/users/card-profile.html
@@ -1,7 +1,12 @@
-
+{% load static %}
 
 <div class="text-center">
-    <img src="" alt="Avatar" class="rounded-full mx-auto mb-4 bg-gray-800 w-32 h-32" />
+    {% if profile.profile_picture %}
+      <img src="{{ profile.profile_picture.url }}" alt="Avatar" class="rounded-full mx-auto mb-4 bg-gray-800 w-32 h-32" />
+    {% else %}
+      <img src="{% static 'users/default_avatar/avatar.png' %}" alt="Avatar" class="rounded-full mx-auto mb-4 bg-gray-800 w-32 h-32" />
+    {% endif %}
+
     <h2 class="text-xl font-bold">{{ user.username }}</h2>
     <p class="text-sm text-gray-500">{{ user.first_name }} {{ user.last_name }}</p>
     <p class="text-sm text-gray-500">{{ user.email }}</p>
