--- a/Project_Manager/templates/users/change-profile.html
+++ b/Project_Manager/templates/users/change-profile.html
@@ -19,7 +19,7 @@
     <button type="submit" name="user_form" class="btn btn-primary">Сохранить</button>
 </form>
 
-<form method="post" class="space-y-4" action="?form=user_form#user-form" id="user-form">
+<form method="post" class="space-y-4" enctype="multipart/form-data" action="?form=user_form#user-form" id="user-form">
     {% csrf_token %}
 
     <h2 class="text-xl font-semibold">Профиль</h2>
