list of notifications

--- a/Project_Manager/templates/users/notifications.html
+++ b/Project_Manager/templates/users/notifications.html
@@ -48,9 +48,9 @@
   
   
     <!-- Контейнер списка -->
-    <div id="psa" class="space-y-3">
-  
-      
+    <div id="notifications" class="space-y-3">
+        
+        {% include 'users/includes/notifications_list.html' %}
       
     </div>
 </div>
