--- a/Project_Manager/templates/includes/sidebar.html
+++ b/Project_Manager/templates/includes/sidebar.html
@@ -67,7 +67,7 @@
         
       </div>
     </div>
-    <a href="{% url 'notifications' %}" class="block px-4 py-2 rounded hover:bg-gray-200 text-gray-800">Уведомления</a>
+    <a href="{% url 'users:notifications' %}" class="block px-4 py-2 rounded hover:bg-gray-200 text-gray-800">Уведомления</a>
   </nav>
   <div class="px-4 py-4 border-t">
     <button class="w-full text-left px-4 py-2 text-sm text-red-600 hover:bg-red-100 rounded">Выйти</button>
