--- a/Project_Manager/templates/teams/includes/add-team-member.html
+++ b/Project_Manager/templates/teams/includes/add-team-member.html
@@ -7,7 +7,7 @@
         <h3 class="text-2xl text-gray-800 font-bold mb-4">Добавить участников в команду</h3>
         <h4 class="text-base text-center text-gray-600 my-4">Введите почту участника которого хотите добавить в команду</h4>
 
-        <form action="{% url 'teams:add_team_member' team.pk %}" method="post">{% csrf_token %}
+        <form action="{% url 'teams:send_invitation_to_team' team.pk %}" method="post">{% csrf_token %}
         
             <div class="">
                 <label for="{{ form.email.id_for_label }}" class="block text-sm font-medium text-gray-700 mb-1">
