--- a/Project_Manager/templates/teams/includes/team_members.html
+++ b/Project_Manager/templates/teams/includes/team_members.html
@@ -41,6 +41,9 @@
                 Добавить участников
             </button>
             {% include 'teams/includes/add-team-member.html' %}
+            <button class="btn btn-primary text-lg mx-4 text-white whitespace-nowrap" onclick="">
+                Отправить приглашение
+            </button>
         </div>
     </div>
 
