--- a/Project_Manager/templates/notifications.html
+++ b/Project_Manager/templates/notifications.html
@@ -8,8 +8,25 @@
   
       <div class="flex items-center gap-x-4 text-2xl font-semibold text-black">
         <div class="btn-group">
-            <input type="radio" name="view" value="new" class="btn btn-outline btn-md" aria-label="Новые" checked />
-            <input type="radio" name="view" value="read" class="btn btn-outline btn-md" aria-label="Прочитанные" />
+            <div class="flex gap-2">
+                <a hx-get="{% url 'users:notification_list' %}" hx-target="#list-content" data-value="new" class="btn btn-outline btn-primary btn-active btn-md">Новые</a>
+                <a hx-get="{% url 'users:invitation_list' %}" hx-target="#list-content" data-value="invites" class="btn btn-outline btn-primary btn-md">Приглашения</a>
+                <a href="#" data-value="read" class="btn btn-outline btn-primary btn-md">Прочитанные</a>
+              </div>
+              
+              <script>
+                const buttons = document.querySelectorAll('[data-value]');
+                buttons.forEach(btn => {
+                  btn.addEventListener('click', () => {
+                    buttons.forEach(b => {
+                      b.classList.add('btn-outline');
+                      b.classList.remove('btn-active');
+                    });
+                    btn.classList.remove('btn-outline');
+                  });
+                });
+              </script>
+              
           </div>          
       </div>
       
@@ -48,9 +65,11 @@
   
   
     <!-- Контейнер списка -->
-    <div id="notifications" class="space-y-3">
+    <div id="list" class="space-y-3">
         
-        {% include 'users/includes/notifications_list.html' %}
+        <div id="list-content">
+            {% include 'users/includes/notifications_list.html' %}
+        </div>
       
     </div>
 </div>
