--- a/Project_Manager/templates/tasks/task-detail.html
+++ b/Project_Manager/templates/tasks/task-detail.html
@@ -179,15 +179,22 @@
         <div class="">
           
           <h3 class="text-gray-700 font-bold text-base mb-1">Исполнители</h3>
-          <div onclick="change_executor_modal.showModal();" class="group relative border border-gray-200 rounded-md p-2 flex flex-wrap">
+          <div onclick="change_executor_modal.showModal();" class="group relative border border-gray-200 rounded-md p-2 flex flex-wrap -space-x-4">
             {% if executors %}
-              {% for executor in executors %}
-                <p class="z-20 text-gray-700 mr-2">{{ executor }}</p>
-              {% endfor %}
+              {% for executor in executors|slice:":7" %}
+                <div title="{{executor}}" class=" z-[20] w-12 rounded-full border border-black border-[2px] ring ring-primary ring-2 overflow-hidden">
+                  <img src="{{executor.profile.get_profile_picture_url}}">
+                </div>
+                {% endfor %}
+                {% if executors.count > 8 %}
+                  <div class="z-20 w-12 h-12 flex justify-center items-center rounded-full bg-neutral border border-black border-1 ring ring-primary ring-2 text-gray-100">
+                    <span class="text-center text-sm">+{{task.executor.count|add:"-7"}}</span>
+                  </div>
+                {% endif %}
             {% else %}
               <p class="text-gray-700">Не заданы</p>
             {% endif %}
-            <div class="absolute inset-0 z-10 rounded-md bg-gray-200 cursor-pointer opacity-0 group-hover:opacity-100"></div>
+            <div class="absolute inset-0 z-10 left-[15px] rounded-md bg-gray-200 cursor-pointer opacity-0 group-hover:opacity-75"></div>
           </div>
           
           {% include 'tasks/includes/change-executor-modal.html' %}
