--- a/Project_Manager/templates/teams/includes/add-team-member.html
+++ b/Project_Manager/templates/teams/includes/add-team-member.html
@@ -26,7 +26,7 @@
             {% endif %}
 
             <div class="mt-6">
-                <button class="btn btn-primary text-white" name="choice_executor" type="submit">Добавить</button>
+                <button class="btn btn-primary text-white" name="choice_executor" type="submit">Отправить приглашения</button>
             </div>
 
         </form>
