--- a/Project_Manager/templates/includes/sidebar.html
+++ b/Project_Manager/templates/includes/sidebar.html
@@ -67,7 +67,13 @@
         
       </div>
     </div>
-    <a href="{% url 'users:notifications' %}" class="block px-4 py-2 rounded hover:bg-gray-200 text-gray-800">Уведомления</a>
+    <div class="indicator width-max">
+      <a href="{% url 'users:notifications' %}" class="block px-4 py-2 rounded hover:bg-gray-200 text-gray-800">
+        {% if unread_notifications %}<span class="indicator-item mt-2 badge badge-secondary">{{unread_notifications}}</span>{%else%}{%endif%}
+        Уведомления
+      </a>
+    </div>
+
   </nav>
   <div class="px-4 py-4 border-t">
     <button class="w-full text-left px-4 py-2 text-sm text-red-600 hover:bg-red-100 rounded">Выйти</button>
