--- a/Project_Manager/templates/notifications.html
+++ b/Project_Manager/templates/notifications.html
@@ -35,9 +35,12 @@
           <div class="relative max-w-2xl w-full">
               <input 
                   type="text" 
-                  name="search1"
+                  name="search_notif"
                   placeholder="Поиск..." 
                   class="input input-bordered bg-gray-50 text-gray-700 border-gray-400 w-full pl-10 pr-6 focus:border-sky-600"
+                  hx-get="{% url 'users:search_notifications' %}"
+                  hx-target="#list-content"
+                  hx-trigger="keyup delay:300ms"
               />
               <svg 
                   class="absolute left-3 top-3 h-5 w-5 text-gray-400 pointer-events-none" 
@@ -67,9 +70,7 @@
     <!-- Контейнер списка -->
     <div id="list" class="space-y-3">
         
-        <div id="list-content">
             {% include 'users/includes/notifications_list.html' %}
-        </div>
       
     </div>
 </div>
