--- a/Project_Manager/templates/teams/includes/team_members.html
+++ b/Project_Manager/templates/teams/includes/team_members.html
@@ -16,9 +16,9 @@
                     name="input_search"
                     placeholder="Поиск..." 
                     class="input input-bordered bg-gray-50 text-gray-700 border-gray-400 w-full pl-10 pr-6 focus:border-sky-600"
-                    hx-get=""
+                    hx-get="{% url 'teams:search_team_members' team.pk %}"
+                    hx-target="#list_team_members"
                     hx-trigger="keyup delay:200ms"
-                    hx-target=""
                 />
                 <svg 
                     class="absolute left-3 top-3 h-5 w-5 text-gray-400 pointer-events-none" 
@@ -57,8 +57,8 @@
                     <th class="w-10 py-3 px-6 text-left font-semibold"></th>
                 </tr>
             </thead>
-            <tbody class="text-gray-600 text-sm font-light">
-                    {% include 'teams/includes/team_members_list.html' %}
+            <tbody id="list_team_members" class="text-gray-600 text-sm font-light">
+                {% include 'teams/includes/team_members_list.html' %}
             </tbody>
         </table>
     </div>
