--- a/Project_Manager/templates/teams/includes/team_members_list.html
+++ b/Project_Manager/templates/teams/includes/team_members_list.html
@@ -1,10 +1,10 @@
 
-{% for member in team.team_member.all %}
+{% for member in team_members %}
 <tr id="team-member-{{member.pk}}" class="border-b border-gray-200 hover:bg-gray-100 transition-colors {% cycle 'bg-white' 'bg-gray-50' %}">
     <td class="w-10 py-1 px-3 text-center whitespace-nowrap">{{ forloop.counter }}</td>
     <td class="py-1 px-6 text-left font-bold">{{ member.username }}</td>
     <td class="py-1 px-6 text-left">{{ member.email|default:"---" }}</td>
-    <td class="py-1 px-6 text-left">Кол-во проектов</td>
+    <td class="py-1 px-6 text-left">{{member.team_projects_count }}</td>
     <td class="py-1 px-6 text-left">
         <div class="dropdown">
             <div tabindex="0" role="button" class="btn m-1 bg-gray-100 text-gray-800 rounded-2xl border-gray-400 hover:bg-gray-50 hover:border-sky-600 shadow-md">Гость <i class='fas fa-angle-down mt-1'></i></div>
@@ -14,7 +14,7 @@
             </ul>
         </div>
     </td>
-    <td class="py-1 px-6 text-left">Дата</td>
+    <td class="py-1 px-6 text-left">{{member.member_date_joining }}</td>
     <td class="" title="Исключить из команды">
         <a 
         hx-post="{% url 'teams:deleting_team_members' team.pk member.pk %}"
