--- a/Project_Manager/templates/projects/includes/add-members-modal.html
+++ b/Project_Manager/templates/projects/includes/add-members-modal.html
@@ -11,7 +11,7 @@
         <form action="{% url 'teams:projects:add_project_members' project.team.pk project.pk %}" method="post">{% csrf_token %}
         
             <div class="space-y-3 max-h-60 overflow-y-auto pr-2">
-                {% for member in team_member %}
+                {% for member in team_members %}
                     <label class="flex items-center gap-3 p-3 bg-white border border-gray-300 rounded-md shadow-sm cursor-pointer hover:bg-gray-50">
                         <input type="checkbox" name="member" value="{{ member.id }}"
                             {% if member.id in project_member_ids %}checked{% endif %}
