--- a/Project_Manager/templates/includes/update-team-modal.html
+++ b/Project_Manager/templates/includes/update-team-modal.html
@@ -3,7 +3,7 @@
     <div class="modal-box bg-gray-100 max-w-md p-6 rounded-lg shadow-xl">
         <button class="btn btn-sm btn-circle btn-ghost absolute right-3 top-3 text-gray-600 hover:text-gray-900 hover:bg-gray-200 transition-colors" onclick="document.getElementById('update_team_modal_{{ team.id }}').close();">✕</button>
       <h3 class="text-2xl font-bold text-gray-800 mb-4">Изменение команды</h3>
-      <form action="{% url 'teams:sidebar_update_team' team.id %}" enctype="multipart/form-data" method="post" id="upload_form_{{ team.id }}">
+      <form action="{% url 'teams:change_team' team.id %}" enctype="multipart/form-data" method="post" id="upload_form_{{ team.id }}">
         {% csrf_token %}
         
         <div  class="flex flex-col gap-4">
