--- a/Project_Manager/templates/projects/includes/setting.html
+++ b/Project_Manager/templates/projects/includes/setting.html
@@ -3,7 +3,7 @@
 {% block configuration_content %}
 
 <div class="p-6 max-w-2xl mx-auto">
-    <form action="" method="post" class="space-y-6" enctype="multipart/form-data">
+    <form action="{% url 'teams:projects:change_project' project.pk %}" method="post" class="space-y-6" enctype="multipart/form-data">
         {% csrf_token %}
 
         <div class="flex flex-col gap-4">
