--- a/Project_Manager/templates/tasks/task-detail.html
+++ b/Project_Manager/templates/tasks/task-detail.html
@@ -12,7 +12,7 @@
 
         <!-- Блок описания -->
         <div>
-          <form method="post">
+          <form method="post" action="{% url_task task 'change_task' %}">
             <details open class="group mb-4">
               <summary class="cursor-pointer font-semibold text-gray-700 flex items-center">
                   <div class="flex items-center text-lg">
@@ -228,7 +228,7 @@
 
         <dialog id="add_tag_modal" class="modal">
           <div class="modal-box bg-gray-100 max-w-md p-6 rounded-lg shadow-xl">
-            <form method="post" action="">{% csrf_token %}
+            <form method="post" action="{% url_task task 'change_tag' %}">{% csrf_token %}
               
               <a class="btn btn-sm btn-circle btn-ghost absolute right-3 top-3 text-gray-600 hover:text-gray-900 hover:bg-gray-200 transition-colors" onclick="add_tag_modal.close();">✕</a>
               <h3 class="text-2xl font-bold text-gray-800 mb-4">Теги</h3>
