--- a/Project_Manager/templates/projects/s.html
+++ b/Project_Manager/templates/projects/s.html
@@ -50,7 +50,7 @@
       <a href="{% url 'teams:projects:tasks:task_list' project.team.id project.id  %}" class="px-4 py-1.5 text-sm font-medium rounded-md border border-blue-600 text-blue-600 hover:bg-blue-100 transition-colors cursor-pointer">
         Открыть
       </a>
-      <a hx-delete="{% url 'teams:projects:delete_project' project.id %}" hx-target="#card_{{project.id}}" hx-swap="delete" class="p-1.5 text-gray-500 hover:text-red-500 hover:bg-red-50 rounded-md transition-colors cursor-pointer">
+      <a hx-delete="{% url 'teams:projects:delete_project' team.pk project.id %}" hx-target="#card_{{project.id}}" hx-swap="delete" class="p-1.5 text-gray-500 hover:text-red-500 hover:bg-red-50 rounded-md transition-colors cursor-pointer">
         <i class="fas fa-trash-alt"></i>
       </a>
     </div>
