--- a/Project_Manager/templates/includes/header-team-conf.html
+++ b/Project_Manager/templates/includes/header-team-conf.html
@@ -35,7 +35,10 @@
             </div>
             <ul tabindex="0" class="dropdown-content z-[1] menu p-2 shadow bg-neutral-50 rounded-box w-52">
                 <li><a class="text-gray-800 hover:text-blue-600"><i class="fas fa-history mr-2"></i>История изменений</a></li>
+                {% if team.author == request.user %}
                 <li><a href="{% url 'teams:delete_team' team.id %}?trigger=detail" class="text-red-500 hover:text-white hover:bg-red-500"><i class="fas fa-trash mr-2"></i>Удалить</a></li>
+                {% else %}
+                {% endif %}
             </ul>
         </div>
     </div>
